--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-:root{
+:root {
     --vdkmagenta: hsl(300, 43%, 22%);
     --softpink: hsl(333, 80%, 67%);
     --dkgraymagenta: hsl(303, 10%, 53%);
@@ -13,20 +13,134 @@
 }
 
 
-body{
+body {
     font-family: 'Spartan', sans-serif;
     font-size: 15px;
+    background-color: var(--white);
+    line-height: 1.3;
+}
+
+.container {
+    padding: 6rem 2rem;
+    min-height: 100vh;
+    display: grid;
+    place-content: center;
+}
+
+.container>* {
+    padding-bottom: 2.5rem;
+}
+
+.upper {
+    text-align: center;
+    color: var(--vdkmagenta);
+}
+
+.upper h1 {
+    line-height: 1;
+    font-size: 2rem;
+    font-weight: 700;
+    padding-bottom: 1.5rem;
+}
+
+.upper p {
+    font-size: 0.85rem;
+    font-weight: 500;
+    line-height: 1.75;
+    color: var(--dkgraymagenta);
+}
+
+.middle {
+    display: grid;
+    align-items: center;
+    gap: 1rem;
+    text-align: center;
+}
+
+.rating {
+    background-color: var(--ltgraymagenta);
+    padding: 1rem;
+    border-radius: 0.5rem;
+}
+
+.rating .star {
+    padding-bottom: 0.5rem;
+}
+
+.star img {
+    padding-left: 0.2rem;
+}
+
+.rating .rate {
+    font-size: 0.85rem;
+    font-weight: 700;
+    color: var(--vdkmagenta);
+}
+
+.lower {
+    display: grid;
+    gap: 1rem;
+}
+
+.card {
+    background-color: var(--vdkmagenta);
+    border-radius: 0.5rem;
+    padding: 2rem;
 }
 
 
+.card .title {
+    display: flex;
+    align-items: center;
+    padding-bottom: 1.5rem;
+}
+
+.title.image {
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    background-color: var(--softpink);
+}
+
+.title .image img {
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+}
+
+.title .name {
+    padding-left: 1.5rem;
+}
+
+.name h3 {
+    color: var(--white);
+    font-weight: 700;
+    font-size: 1rem;
+    padding-bottom: 0.2rem;
+}
+
+.name h4 {
+    color: var(--softpink);
+    font-size: 1rem;
+    font-weight: 400;
+}
+
+.card .info {
+    color: var(--white);
+    font-weight: 400;
+    line-height: 1.75;
+    font-size: 0.75rem;
+}
 
 
 /* Footer */
 .attribution {
     font-size: 11px;
     text-align: center;
-  }
+    padding-bottom: 1rem;
+}
 
-  .attribution a {
+.attribution a {
     color: hsl(228, 45%, 44%);
-  }
+    text-decoration: none;
+}
