--- a/style.css
+++ b/style.css
@@ -61,6 +61,8 @@ body {
     background-color: var(--ltgraymagenta);
     padding: 1rem;
     border-radius: 0.5rem;
+    display: flex;
+    flex-direction: column;
 }
 
 .rating .star {
@@ -114,7 +116,7 @@ body {
 
 .name h3 {
     color: var(--white);
-    font-weight: 700;
+    font-weight: 500;
     font-size: 1rem;
     padding-bottom: 0.2rem;
 }
@@ -143,4 +145,80 @@ body {
 .attribution a {
     color: hsl(228, 45%, 44%);
     text-decoration: none;
+}
+
+@media screen and (min-width: 1440px) {
+    .container {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(2, auto);
+        max-width: 1200px;
+        margin: 0 auto;
+        min-height: 100vh;
+    }
+
+    .upper {
+        grid-column: 1 / 3;
+        text-align: start;
+    }
+
+    .upper h1 {
+        font-size: 3rem;
+        padding-bottom: 0.75rem;
+        max-width: 400px;
+    }
+
+    .upper p {
+        font-size: 1rem;
+        max-width: 500px;
+    }
+
+    .middle {
+        gap: 1rem;
+        align-self: center;
+        justify-self: end;
+    }
+
+    .middle .one{
+        transform: translateX(-6rem);
+    }
+    .middle .two{
+        transform: translateX(-3rem);
+    }
+
+    .rating {
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .rating .star {
+        padding-right: 1rem;
+        padding-bottom: 0;
+    }
+
+    .card{
+        padding: 2.5rem 2rem;
+    }
+
+    .card .info{
+        font-size: 0.75rem;
+        letter-spacing: 0.2px;
+        word-spacing: 2px;
+    }
+
+    .lower {
+        grid-column: 1 / -1;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 2rem;
+        padding-top: 2rem;
+    }
+
+    .lower .down_two {
+        transform: translateY(1rem);
+    }
+
+    .lower .down_three {
+        transform: translateY(2rem);
+    }
+
 }
