--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@ body {
     font-size: 15px;
     background-color: var(--white);
     line-height: 1.3;
+    background-image: url('./images/bg-pattern-top-mobile.svg'), url('./images/bg-pattern-bottom-mobile.svg');
+    background-repeat: no-repeat, no-repeat;
+    background-position: calc(50% - 0rem) -0rem, calc(50% + 435px) calc(100% + 580px);
+    background-size: contain;
 }
 
 .container {
@@ -148,6 +152,13 @@ body {
 }
 
 @media screen and (min-width: 1440px) {
+    body{
+        background-image: url('./images/bg-pattern-top-desktop.svg'), url('./images/bg-pattern-bottom-desktop.svg');
+        background-repeat: no-repeat, no-repeat;
+        background-position: calc(50% - 34rem) -14rem, calc(50% + 12rem) calc(100% + 2rem);
+        background-size: contain;
+    }
+
     .container {
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(2, auto);
